--- a/archlinux/.config/i3/config
+++ b/archlinux/.config/i3/config
@@ -207,9 +207,8 @@ exec --no-startup-id xset r rate 200 30
 exec --no-startup-id xset -dpms
 exec --no-startup-id dual-monitor
 
-#exec_always --no-startup-id restart-polybar
-#exec_always --no-startup-id tint2
-exec_always --no-startup-id xfce4-panel
+exec_always --no-startup-id restart-polybar
+#exec_always --no-startup-id xfce4-panel
 exec_always --no-startup-id /usr/lib/xfce4/notifyd/xfce4-notifyd
 exec_always --no-startup-id polychromatic-tray-applet
 
