--- a/archlinux/.config/polybar/config
+++ b/archlinux/.config/polybar/config
@@ -10,11 +10,9 @@
 [colors]
 
 transparent = #0000
+background = ${self.black}
 foreground = #dfdfdf
 foreground-alt = #555
-primary = #ffb52a
-secondary = #e60053
-alert = #bd2c40
 
 ; one-dark colorscheme
 black        = #282c34
@@ -98,19 +96,21 @@ label-unmounted-foreground = ${colors.grey}
 type = internal/bspwm
 
 label-focused = %index%
-label-focused-background = ${colors.transparent}
-label-focused-underline= ${colors.primary}
+label-focused-background = ${colors.grey}
+label-focused-underline = ${colors.blue}
 label-focused-padding = 2
 
 label-occupied = %index%
+label-occupied-background = ${colors.grey}
 label-occupied-padding = 2
 
 label-urgent = %index%!
-label-urgent-background = ${colors.alert}
+label-urgent-background = ${colors.red}
 label-urgent-padding = 2
 
 label-empty = %index%
 label-empty-foreground = ${colors.foreground-alt}
+label-empty-background = ${colors.blue}
 label-empty-padding = 2
 
 [module/i3]
@@ -124,28 +124,34 @@ wrapping-scroll = false
 
 label-mode-padding = 2
 label-mode-foreground = #000
-label-mode-background = ${colors.primary}
+label-mode-background = ${colors.background}
 
 ; focused = Active workspace on focused monitor
 label-focused = %index%
-label-focused-background = ${module/bspwm.label-focused-background}
-label-focused-underline = ${module/bspwm.label-focused-underline}
-label-focused-padding = ${module/bspwm.label-focused-padding}
+label-focused-foreground = ${colors.grey}
+label-focused-background = ${colors.yellow}
+label-focused-underline = ${colors.grey}
+label-focused-padding = 2
 
 ; unfocused = Inactive workspace on any monitor
 label-unfocused = %index%
-label-unfocused-padding = ${module/bspwm.label-occupied-padding}
+label-unfocused-background = ${colors.transparent}
+label-unfocused-underline =
+label-unfocused-padding = 2
 
 ; visible = Active workspace on unfocused monitor
 label-visible = %index%
+label-visible-foreground = ${self.label-focused-foreground}
 label-visible-background = ${self.label-focused-background}
-label-visible-underline = ${self.label-focused-underline}
+label-visible-underline =
 label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
 label-urgent = %index%
-label-urgent-background = ${module/bspwm.label-urgent-background}
-label-urgent-padding = ${module/bspwm.label-urgent-padding}
+label-urgent-foreground = ${colors.white}
+label-urgent-background = ${colors.red}
+label-urgent-underline = ${colors.yellow}
+label-urgent-padding = ${self.label-focused-padding}
 
 [module/mpd]
 type = internal/mpd
