--- a/archlinux/.config/i3/config
+++ b/archlinux/.config/i3/config
@@ -166,36 +166,16 @@ mode "resize" {
 
 bindsym $mod+y mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-#bar {
-#  font pango:Font Awesome 10
-#
-#  status_command "polybar bar"
-#
-#  position top
-#
-#  #tray_output primary
-#
-#  colors {
-#    separator #928374
-#    background #282828
-#    statusline #ebdbb2
-#    focused_workspace #689d6a #689d6a #282828
-#    active_workspace #1d2021 #1d2021 #928374
-#    inactive_workspace #32302f #32302f #928374
-#    urgent_workspace #cc241d #cc241d #ebdbb2
-#  }
-#}
+client.focused #c678dd #c678dd #98c379 #98c379
+client.focused_inactive #282c34 #282c34 #98c379 #98c379
+client.unfocused #282c34 #282c34 #98c379 #98c379
+client.urgent #be5046 #be5046 #98c379 #98c379
 
-client.focused #ff5964 #ff5964 #282828 #282828
-client.focused_inactive #1d2021 #1d2021 #928374 #282828
-client.unfocused #32302f #32302f #928374 #282828
-client.urgent #cc241d #cc241d #ebdbb2 #282828
+for_window [class="^.*$"] border pixel 2
+default_border normal
+default_floating_border none
 
-for_window [class="^.*$"] border pixel 1
-
-gaps inner 25
+gaps inner 8
 gaps outer 0
 
 exec --no-startup-id compton -bcCGfz
