Fix polybar’s tray.

--- a/archlinux/.config/polybar/config
+++ b/archlinux/.config/polybar/config
@@ -62,7 +62,7 @@ tray-position = right
 tray-detached = false
 tray-maxsize = 20
 tray-transparent = false
-tray-background = ${root.transparent}
+tray-background = ${colors.transparent}
 tray-offset-x = 0
 tray-offset-y = 0
 tray-padding = 0
