Various modifications for gruvbox and termite.

--- a/archlinux/.config/i3/config
+++ b/archlinux/.config/i3/config
@@ -10,7 +10,7 @@ floating_modifier $mod
 # keybindings
  
 # start a terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec $TERMINAL
 
 # kill focused window
 bindsym $mod+Shift+B kill
