--- a/archlinux/.config/rofi/config
+++ b/archlinux/.config/rofi/config
@@ -1,7 +1,8 @@
 rofi.modi:                           window,run
-rofi.opacity:                        30
 rofi.theme: Pop-Dark
 rofi.font: DejaVu Sans Mono 12
+rofi.color-window: #EE000000, #EE000000, #EE000000
+rofi.color-active: #00000000, #DEDEDE, #00000000, #DEDEDE, #DEDEDE
 rofi.lines: 15
 rofi.columns:                        3
 rofi.levenshtein-sort:               true 
