--- a/archlinux/.config/i3/config
+++ b/archlinux/.config/i3/config
@@ -154,4 +154,4 @@ exec_always --no-startup-id restart-polybar
 exec_always --no-startup-id /usr/lib/xfce4/notifyd/xfce4-notifyd
 exec_always --no-startup-id polychromatic-tray-applet
 exec_always --no-startup-id nm-applet
-
+exec_always --no-startup-id redshift-gtk
