--- a/archlinux/.fzfrc
+++ b/archlinux/.fzfrc
@@ -1,32 +1,14 @@
 source /usr/share/fzf/completion.zsh
 source /usr/share/fzf/key-bindings.zsh
 
-local color00='#32302f'
-local color01='#3c3836'
-local color02='#504945'
-local color03='#665c54'
-local color04='#bdae93'
-local color05='#d5c4a1'
-local color06='#ebdbb2'
-local color07='#fbf1c7'
-local color08='#fb4934'
-local color09='#fe8019'
-local color0A='#fabd2f'
-local color0B='#b8bb26'
-local color0C='#8ec07c'
-local color0D='#83a598'
-local color0E='#d3869b'
-local color0F='#d65d0e'
-
 export FZF_DEFAULT_COMMAND='rg --files --follow'
 
 export FZF_DEFAULT_OPTS="
   --no-height -m
-  --color=bg+:$color01,bg:$color00,spinner:$color0C,hl:$color0D
-  --color=fg:$color04,header:$color0D,info:$color0A,pointer:$color0C
-  --color=marker:$color0C,fg+:$color06,prompt:$color0A,hl+:$color0D
+  --color=dark
+  --color=fg:-1,bg:-1,hl:#c678dd,fg+:#c678dd,bg+:-1,hl+:#d858fe
+  --color=info:#98c379,prompt:#61afef,pointer:#be5046,marker:#e5c07b,spinner:#61afef,header:#61afef
   "
 
 export FZF_CTRL_T_OPTS='--border --height 40'
-
 export FZF_CTRL_R_OPTS='--border --height 20 --preview='
