So many changes!

--- a/archlinux/.config/termite/config
+++ b/archlinux/.config/termite/config
@@ -7,7 +7,7 @@ allow_bold = true
 dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
-font = DejaVu Sans Mono 12
+font = DejaVu Sans Mono NF 14
 scrollback_lines = 10000
 search_wrap = true
 icon_name = terminal
