--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -1,6 +1,5 @@
 set -sg escape-time 0
 set-option -g prefix C-a
-#set-option -ga terminal-overrides ",xterm*:Tc"
 set -g default-terminal "xterm-256color-italic"
 set-option -ga terminal-overrides ",xterm-256color-italic*:Tc"
 set -g allow-rename off
@@ -25,56 +24,14 @@ bind-key    -T copy-mode-vi r send-keys -X cursor-right
 bind-key    -T prefix g set -g status
 bind -n WheelUpPane copy-mode
 
-# design tweaking
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'odedlaz/tmux-onedark-theme'
 
-# panes
-set -g pane-active-border-fg colour204
-set -g pane-active-border-bg default
-set -g pane-border-fg colour238
-set -g pane-border-bg default
+set -g @onedark_time_format "%H:%M"
 
-# status line
-set -g status-justify centre
-set -g status-fg colour137
-set -g status-bg default
-set -g status-attr bright
-set -g status-interval 1
-set -g status-position bottom
-set -g status-left '#[fg=colour202,bold]#S '
-set -g status-left-length 50
-set -g status-right '#[fg=colour205,bold]#H #[fg=colour206,bold] %H:%M:%S'
-set -g status-right-length 50
-
-# messaging
-set -g message-bg yellow
-set -g message-fg black
-set -g message-command-bg black
-set -g message-command-fg blue
-
-# window mode
-setw -g mode-bg colour204
-setw -g mode-fg black
-
-# window status
-setw -g window-status-current-fg colour203
-setw -g window-status-current-attr bright
-setw -g window-status-current-format '#I#[fg=colour250]:#[fg=colour204]#W#[fg=colour205]#F'
-
-setw -g window-status-fg colour5
-setw -g window-status-attr dim 
-setw -g window-status-format '#I#[fg=colour238]:#[fg=colour242]#W#[fg=colour244]#F'
-
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour1
-
-# }
-# The messages {
-
-set -g message-attr bold
-set -g message-fg colour232
-set -g message-bg colour166
-
-# }
-
-run-shell ~/.config/tmux-resurrect/resurrect.tmux
+run -b '~/.tmux/plugins/tpm/tpm'
