Fix some errors in rustfmt.

--- a/rust/rustfmt.toml
+++ b/rust/rustfmt.toml
@@ -50,7 +50,7 @@ trailing_semicolon = true
 type_punctuation_density = "Wide"
 use_field_init_shorthand = true
 use_try_shorthand = true
-format_doc_comments = ture
+format_doc_comments = true
 wrap_comments = true
 match_arm_blocks = false
 overflow_delimited_expr = false
@@ -58,6 +58,5 @@ blank_lines_upper_bound = 1
 blank_lines_lower_bound = 0
 hide_parse_errors = false
 color = "Auto"
-unstable_features = "true"
-license_template_path = ""
+unstable_features = true
 normalize_doc_attributes = true
