--- a/archlinux/.config/termite/config
+++ b/archlinux/.config/termite/config
@@ -7,7 +7,7 @@ allow_bold = true
 dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
-font = DejaVu Sans Mono NF 14
+font = DejaVu Sans Mono 14
 scrollback_lines = 10000
 search_wrap = true
 icon_name = terminal
@@ -20,7 +20,7 @@ cursor_blink = system
 cursor_shape = block
 
 # $BROWSER is used by default if set, with xdg-open as a fallback
-#browser = 
+#browser =
 
 # set size hints for the window
 size_hints = true
