--- a/archlinux/.tmux.conf
+++ b/archlinux/.tmux.conf
@@ -1,7 +1,7 @@
 set -sg escape-time 0
 set-option -g prefix C-a
-set -g default-terminal "xterm-256color-italic"
-set-option -ga terminal-overrides ",xterm-256color-italic*:Tc"
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color*:Tc"
 set -g allow-rename off
 
 # key bindings
